# openzl-java

./: CMakeLists.txt  README.md  pom.xml
src/main/java/net/openzl/: CompressionGraph.java  CompressionInfo.java  NativeLibraryLoader.java  OpenZLCompressor.java  OpenZLDecompressor.java  OpenZLException.java  OpenZLFactory.java  OpenZLJNI.java  OpenZLUtils.java
src/main/java/net/openzl/examples/: OpenZLExample.java
src/main/native/: net_openzl_OpenZLJNI.h  openzl.jni.c  openzl_jni.c
